# Cpp-Tuttor

./: .gitattributes  .gitignore  README.md
backend/: cli.py  pyproject.toml
backend/app/: tracer_main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: trace.py
backend/app/services/: compile_service.py  gdb_driver.py  heap_tracker.py  py_tracer.py  sandbox.py  trace_service.py  trace_store.py
backend/app/services/value_parser/: __init__.py  array.py  base.py  generic.py  pointer.py  primitive.py  stl.py  struct_.py
backend/tests/integration/: golden_util.py  test_adversarial.py  test_c_samples.py  test_golden.py  test_heap_samples.py  test_invariants.py  test_py_samples.py  test_samples.py  test_stdin_matrix.py
backend/tests/integration/golden/: arrays.json  basics.json  c_arrays.json  c_basics.json  c_heap_bug.json  c_recursion.json  c_struct_list.json  heap_bug.json  pointers.json  py_aliasing.json  py_basics.json  py_dict.json  py_exception.json  py_objects.json  py_recursion.json  recursion.json  struct_list.json  vector_string.json
backend/tests/unit/: fakes.py  test_api.py  test_compile_dispatch.py  test_py_tracer.py  test_robustness.py  test_struct_stl_parsers.py  test_trace_builder.py  test_value_parsers.py  trace_invariants.py
docker/: Dockerfile.tracer
docs/: spec.md  trace-schema.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  (+2 more)
samples/: arrays.cpp  basics.cpp  heap_bug.cpp  pointers.cpp  recursion.cpp  struct_list.cpp  vector_string.cpp
(+66 files in other folders)
